--- a/journal/201903.md
+++ b/journal/201903.md
@@ -117,7 +117,7 @@ Proposal status as of {}:
 Pre-proposals:
 
 * [India education and awareness campaign](https://www.reddit.com/r/decred/comments/awb5y0/preproposal_decred_india_community_new_user/) by u/Blocknext. In a chat [discussion](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15515162772723165JzrFj:matrix.org) it was pointed out that a [similar proposal](https://www.dash.org/forum/threads/building-commercial-dash-use-in-the-freelancing-industry-across-south-asia.17890/) was submitted for Dash.
-* [Second constitutional amendment](https://www.reddit.com/r/decred/comments/b84t6b/preproposal_second_constitutional_amendment_to/) to declare February 8th the International day of Stakey by @richardred.
+* [Second constitutional amendment](https://www.reddit.com/r/decred/comments/b84t6b/preproposal_second_constitutional_amendment_to/) by @richardred to declare February 8th the International day of Stakey.
 
 decredcommunity.org got some [criticism](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155227203622209rOKeX:decred.org) for not being open source and not explicitly stating it in the body of the proposal. One of the arguments is that the Treasury never paid for closed source work before, except for some integrations where it could not be disclosed. Captured in [this issue](https://github.com/karamble/dcrcommunityweb/issues/1), the discussion also triggered some [improvements](https://github.com/decred/dcrdocs/pull/896) in proposal guidelines to state any restrictions on deliverables.
 
@@ -142,37 +142,15 @@ Nodes: As of Apr 1 there were 191 public listening nodes and 336 normal nodes pe
 
 ## Mining
 
+* New mining pool appeared as shown by [dcrstats](https://dcrstats.com/pow): [lab.antpool.com](http://lab.antpool.com/).
+* This Chinese [support page](https://support.okex.com/hc/zh-cn/articles/360024177931-%E6%94%AF%E6%8C%81%E5%B8%81%E7%A7%8D) suggests OKEx has a new mining pool for Decred.
+* Scott Offord [announced](https://twitter.com/offordscott/status/1111714556529831936) on Twitter that MicroBT sells last 200 units of Whatsminer D1 at $750 each and doesn't plan any more Decred miners after that.
+
 ## Integrations
 
-{new items of infrastructure or updates from existing}
+OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the listing of DCR pairs against BTC, ETH and USD, adding another fiat on-ramp for DCR. The news followed a joint [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco.
 
-{OKEx PoW pool dig more info}
-
-* https://support.okex.com/hc/zh-cn/articles/360024177931-%E6%94%AF%E6%8C%81%E5%B8%81%E7%A7%8D
-
-Exchange integrations:
-
-* DCR/USD, DRC/BTC, and DCR/ETH https://twitter.com/OKCoin/status/1105892924586258434 https://medium.com/@OKCoin/decred-dcr-now-listed-on-okcoin-a7ea9adea7b7
-
-{OTC desks}
-
-{payment processors}
-
-{wallets}
-
-CoinText added DCR support. Do read up on how the service works and use appropriate caution and small amounts. https://twitter.com/vinarmani/status/1111034078847995905
-
-{regular 3rd party warning}
-
-## Adoption
-
-New merchants:
-
-* {}
-
-{applications of Decred blockchain and related projects: Politeia, atomicswap}
-
-{investment adoption}
+[CoinText](https://cointext.io/) added [DCR support](https://twitter.com/vinarmani/status/1111034078847995905). The service allows to send DCR to anyone with a phone in the US and Canada. Do read up on how the service works and use appropriate caution and small amounts.
 
 ## Outreach
 
