--- a/journal/201903.md
+++ b/journal/201903.md
@@ -154,18 +154,25 @@ OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the li
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+March was one of the most successful months in the history of the Decred-Ditto relationship. From helping organize an incredibly successful event at OKCoin offices in San Francisco, to securing a feature article in The Wall Street Journal, Ditto and Decred made some major waves in the space. Ditto lost count of how many other crypto companies and enthusiasts reached out to them just to congratulate Ditto/Decred on WSJ and compliment them on a fantastic event.
 
-ditto biweekly mar 1 https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org
+Ditto's March achievements:
 
-ditto biweekly mar 15 https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org
+* Secured a [feature article](https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191) on Decred in The Wall Street Journal by facilitating multiple interviews with Jake Yocom-Piatt and Chris Burniske of Placeholder VC. More than any media coverage generated thus far, this article most effectively described Decred to a broad, non-crypto, mainstream audience of financial decision-makers - significantly enhancing its visibility and credibility outside the crypto world. Text available [here](https://www.reddit.com/r/decred/comments/b12z34/gerons_take_decred_aims_to_reach_cryptos/eiiwnpm/), and an interesting backstory [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org).
+* Secured an in-depth [technical profile](https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/) of Decred in The Block. Plain text version [here](https://pastebin.com/Dg2ELYat).
+* Facilitated 5 interviews: background interview with Laura Shin (the host of the Unchained/Unconfirmed podcasts), 2 interviews with a CryptoBriefing analyst for an in-depth research report, one with The Block that resulted in a longer-form profile of Decred, and one with WSJ that resulted in a feature article.
+* Helped organize and put on the OKCoin-Decred listing event, which was a huge success - about 110 people attended, including a lot of vcs and crypto CEOs. Ditto received a lot of compliments, and the fact that so many people stayed to network long after the event had ended speaks to its quality. Chris Burniske and Alex Evans fro Placeholder VC, as well as Jake, spoke at the event and drew a great crowd.
+* Attended the first inaugural Decred meetup in San Francisco, which thanks to the organizers had an awesome turnout of 60+ people.
+* Provided format and content ideas for the Decred Assembly videos.
+* Drafted high-level messaging around how ticketing works (pending).
+* Drafted a byline on the Treasury for investinblockchain.com, which [went live](https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/) in April.
 
-ditto biweekly mar 29 https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1553889088955UNmaG:decred.org
+For more detail and smaller items see Ditto's biweekly updates from [Mar 1](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org), [Mar 15](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org) and [Mar 29](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1553889088955UNmaG:decred.org).
 
 Discussions:
 
-* Revisited idea to give "decentralized credits" more visibility https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155298850932396heGyM:decred.org https://github.com/decred/dcrweb/issues/615 https://github.com/decred/dcrweb/issues/66
-* "skin in the game" is hackneyed and vague, people have it in all crypto projects. The decision to forgo liquidity on exchange for the right to participate in governance warrants a term that is more meaningful and reflective of the difference between Decred and other projects https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155309851735051wGBlh:decred.org
+* [Revisited](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$155298850932396heGyM:decred.org) an [old idea](https://github.com/decred/dcrweb/issues/66) to give "decentralized credits" more visibility.
+* An [question](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$155309851735051wGBlh:decred.org) whether Decred needs a more specific term than "skin in the game" which is hackneyed, vague and used by many crypto projects. The decision to forgo liquidity on exchange for the right to participate in governance warrants a term that is more meaningful and reflective of the difference between Decred and other projects. This and other concepts with floating names are captured in [this issue](https://github.com/xaur/decred-issues/issues/65).
 
 ## Events
 
