--- a/journal/201903.md
+++ b/journal/201903.md
@@ -199,48 +199,43 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
+Community efforts:
 
-* https://github.com/maxbron08/Decred-Canon
-* podcast update
-* @Denni Lovejoy actively engaged in #writers_room to produce accurate scripts for his videos per the approved [proposal]({link})
-* @karamble's site update
-* Decred Journal is now mirrored on decredcommunity.org. Note the nice country flag buttons to quickly jump to translations!
-* new articles by @mm at stakey.club: [Sharing the dcrd](https://stakey.club/en/sharing-the-dcrd/) with multiple devices and [Decred Verifier](https://stakey.club/en/decred-verifier/) script to check hashes and signatures (you do verify signatures, right?).
+* @Denni Lovejoy actively engaged in #writers\_room to produce accurate scripts for his videos per the approved wallet tutorial [proposal](https://proposals.decred.org/proposals/a3def199af812b796887f4eae22e11e45f112b50c2e17252c60ed190933ec14f).
+* @anshawblack will head to New York in May to record multiple in person for the podcast.
+* Decred Journal is now [mirrored](https://decredcommunity.org/filter?tag=Decred%20Journal&key=category) on decredcommunity.org. Notice the nice country flag buttons to quickly jump to translations.
+* @max\_bronstein compiled [Decred Canon](https://github.com/maxbron08/Decred-Canon) - a collection of readings and resources to help people familiarize themselves with the Decred Project.
+* New articles by @mm at stakey.club: [Sharing the dcrd](https://stakey.club/en/sharing-the-dcrd/) with multiple devices, [Decred Verifier](https://stakey.club/en/decred-verifier/) script to check hashes and signatures (you do verify signatures, right?).
 
-{ratings news}
-
-FCAS, integrated in cmc {insert current decred rating}
-*  https://medium.com/@davebalter/coinmarketcap-partners-with-flipside-crypto-to-distribute-project-health-scores-f181374f3d0e
-* https://coinmarketcap.com/currencies/decred/#ratings
+CoinMarketCap [started to show](https://medium.com/@davebalter/coinmarketcap-partners-with-flipside-crypto-to-distribute-project-health-scores-f181374f3d0e) FCAS rating for crypto assets. The Fundamental Crypto Asset Score is tracked by Flipside Crypto since early 2017 and is available for more than 450 projects. The goal of the system is to answer "can this crypto project produce product people want to use, and are people using it?" by largely ignoring price movements and instead putting more weight in customer activity and developer behavior, as explained [here](https://www.flipsidecrypto.com/fcas-explained). As of {} Decred is [rated](https://coinmarketcap.com/currencies/decred/#ratings) "A" 795 out of 1000 {update}.
 
 Selected articles:
 
-* https://www.cryptonewsz.com/how-close-to-absolute-decentralization-is-decreds-unique-consensus-mechanism/8998/ (missed in Feb issue)
-* https://medium.com/@NoahPierau/the-best-on-chain-governance-system-67759bf25335 (missed in Feb issue)
-* https://www.smithandcrown.com/decred-deep-dive-report/ {}-page report
-* https://mp.weixin.qq.com/s/GTw2YJPyASJZNJf2ZP1WDw (CN)
-* https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191 sharing far and wide recommended, backstory how it was achieved and a non-paywalled link here https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155258031728259tirwF:decred.org
-* https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/ (paywall)
-* https://beincrypto.com/the-cryptocurrency-industry-has-a-forking-problem-can-on-chain-governance-help-solve-it/
-* https://www.binance.vision/blockchain/hybrid-pow-pos-consensus-explained {can add a short 1-2 sent. backstory}
-* https://medium.com/decred/more-exchanges-more-access-decred-grows-availability-liquidity-95accbbf6835
-* https://medium.com/@aappiahpro1/how-i-pitch-decred-in-africa-62b9ee8da7e1 {or Outreach}
-* https://www.neverstopmarketing.com/decred-and-democracy/
-* https://medium.com/@caseycaruso/decred-dcr-1c809eb8bc5d
+* How Close to Absolute Decentralization is Decred's Unique Consensus Mechanism? by Trevor Holman ([cryptonewsz.com](https://www.cryptonewsz.com/how-close-to-absolute-decentralization-is-decreds-unique-consensus-mechanism/8998/), _missed in Feb issue_)
+* The best on-chain governance system by @Haon ([medium](https://medium.com/@NoahPierau/the-best-on-chain-governance-system-67759bf25335), _missed in Feb issue_)
+* Decred: Deep Dive Report by Smith + Crown ([smithandcrown.com](https://www.smithandcrown.com/decred-deep-dive-report/), 19-page research report)
+* The Cryptocurrency Industry Has a Forking Problem! Can On-Chain Governance Help Solve It? by Florian Gheorghe ([beincrypto.com](https://beincrypto.com/the-cryptocurrency-industry-has-a-forking-problem-can-on-chain-governance-help-solve-it/))
+* Decred Aims to Reach Crypto's Decentralized Ideals by Tomio Geron ([wsj.com](https://www.wsj.com/articles/gerons-take-decred-aims-to-reach-cryptos-decentralized-ideals-11552523191), paywall, sharing far and wide recommended to amplify impact)
+* Decred, an experiment in on-chain governance by Steven Zheng ([theblockcrypto.com](https://www.theblockcrypto.com/2019/03/20/decred-an-experiment-in-on-chain-governance/), paywall)
+* Hybrid PoW/PoS Consensus Explained by @richardred ([binance.vision](https://www.binance.vision/blockchain/hybrid-pow-pos-consensus-explained))
+* Decred's "Skin-in-the-Game" Governance Experiment by Jeremy Epstein ([neverstopmarketing.com](https://www.neverstopmarketing.com/decred-and-democracy/) _thanks for the kind words!_)
+* More Exchanges, More Access: Decred Grows Availability & Liquidity by @Dustorf ([medium](https://medium.com/decred/more-exchanges-more-access-decred-grows-availability-liquidity-95accbbf6835))
+* Decred Overview by Casey Caruso ([medium](https://medium.com/@caseycaruso/decred-dcr-1c809eb8bc5d))
+* How I pitch Decred in Africa by @George Pro ([medium](https://medium.com/@aappiahpro1/how-i-pitch-decred-in-africa-62b9ee8da7e1))
 
-Some errors in the media are really not that bad:
+New info leaked about c0:
 
 > Haon: https://crypto.bi/tape/blog/dcr/ - "The founders of decred originally worked on the development of Bitcoin in a project called biscuits."  
 > jy-p: working on biscuits for a while gave us the perspective we needed to start decred. our second project, fried chicken, is what led us to create our own louisiana kitchen
 
-A few more gems were found on [Crunchbase](https://www.crunchbase.com/organization/decred): Decred is a "Private", "For Profit" company, "uses 8 technology products and services including PHP, nginx, and Google Drive", and "is actively using 24 technologies for its website. These include Viewport Meta, IPhone / Mobile Compatible, and SSL by Default". Finally, the team includes 2x Jacob Yocom-Piatt, which partially explains the amount of foresight behind the project.
+A few more gems were found on [Crunchbase](https://www.crunchbase.com/organization/decred): Decred is a "Private", "For Profit" company, "uses 8 technology products and services including PHP, nginx, and Google Drive", and "is actively using 24 technologies for its website. These include Viewport Meta, IPhone / Mobile Compatible, and SSL by Default". Finally, the team includes _two_ Jacob Yocom-Piatt, which somewhat explains the amount of foresight behind the project.
 
 Translations:
 
 * Decred: Where did it all begin? [in Dutch](https://github.com/Arriu/Decred/blob/master/translations/wherediditallbegin_dutch.md) by @jazzah
 * Detailed analysis of Decred fork resistance [in Dutch](https://decredcommunity.org/nl/blog/detailed-analysis-of-decred-fork-resistance) by @jazzah
-* Decred Journal - January 2019 [in Vietnamese](https://github.com/raedahgroup/decred-journal/blob/master/vietnamese/2019-01.md) by Duyên Em
+* Decred Journal January and February issues were [translated](https://xaur.github.io/decred-news/) to - hold your breath: Arabic by @arij (victorious after long fight with right-to-left issues), Chinese by @guang, Polish by @kozel, Russian by @DZ, Spanish by @elian and Vietnamese by Duyên Em. Thank you so much for spreading the word!
+* Translators, note that there is an index of translated articles [here](https://github.com/artikozel/decred-translations/blob/master/article_index.md). Reach out in [#writers_room](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org) or via pull request to add your translations.
 
 Videos:
 
@@ -248,11 +243,9 @@ Videos:
 
 Audio:
 
-* http://didyouknowcrypto.com/ep26/
-* https://blockcrunch.libsyn.com/how-does-decreds-governance-work-noah-pierau-decred-project
-  * https://itunes.apple.com/us/podcast/how-does-decreds-governance-work-noah-pierau-decred-part-1/id1350649166?i=1000431532255&mt=2
-  * https://open.spotify.com/episode/7xST0eTxy4xnaK6NILXcbx?si=o3AJJuLvQka7lnpT1BrzWw
-* https://letstalkbitcoin.com/blog/post/the-blockcrunch-defending-decreds-onchain-governance-part-2
+* Did You Know Crypto - Episode 26: On Decred. @moo31337 talks about his background, what is Decred, its hybrid consensus, stability, proposal system and the DEX. ([didyouknowcrypto.com](http://didyouknowcrypto.com/ep26/))
+* The Blockcrunch - How Does Decred's Governance Work? Part 1 of interview with @Haon talks about Decred's governance, stakeholder rewards, voting topics and why both miners and voters are needed. ([libsyn.com](https://blockcrunch.libsyn.com/how-does-decreds-governance-work-noah-pierau-decred-project), [itunes](https://itunes.apple.com/us/podcast/how-does-decreds-governance-work-noah-pierau-decred-part-1/id1350649166?i=1000431532255&mt=2), [spotify](https://open.spotify.com/episode/7xST0eTxy4xnaK6NILXcbx?si=o3AJJuLvQka7lnpT1BrzWw))
+* The Blockcrunch - Defending Decred's Onchain Governance. Part 2 of interview with @Haon continues about enforceability of on-chain votes, stake-based vs entity-based voting, fairness and centralization in PoS and threat of malicious actors. ([libsyn.com](https://blockcrunch.libsyn.com/defending-decred-noah-pierau-decred-part-2))
 
 ## Community
 
