--- a/journal/201903.md
+++ b/journal/201903.md
@@ -128,6 +128,8 @@ To get notified about Politeia proposal activity, enable email notifications in 
 Discussions:
 
 * The rate of [spending the Treasury](https://www.reddit.com/r/decred/comments/b5vlrl/we_have_spent_23_of_decred_treasury_should_we_be/) and allocation of funds.
+* Ideas for [financial reporting](https://www.reddit.com/r/decred/comments/b2zopq/simple_financial_reporting/).
+* Upvoting of own comments was brought up again with some consensus around disabling that ability. All discussions are indexed in [this issue](https://github.com/decred/politeiagui/issues/845) which was reopened.
 * @richardred suggested to base the quorum solely on the percentage of [Yes votes](https://github.com/decred/politeia/issues/729) (currently Yes+No votes are counted) and produced a [simulation](https://github.com/RichardRed0x/pi-research/blob/master/analysis/voting/quorum-change-examples.md) that visualizes different quorum calculation methods.
 
 ## Network
@@ -247,37 +249,29 @@ Audio:
 
 ## Community
 
-Community stats:
+Community stats as of Apr 1:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
-* Discord users: {}, verified to post: {}
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
-* Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: Decred page {} (+{}), Politeia page {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* Twitter followers: 40,309 (+512)
+* Reddit subscribers: 9,405 (+40)
+* Matrix users: 284 (+18)
+* Slack users: 6,639 (+58)
+* Discord users: 2,124 (+23), verified to post: 161 (+30)
+* Telegram users: 4,042 (-230)
+* YouTube subscribers: 3,764 (+18)
+* Facebook followers: 3,165 (+24), likes: 2,906 (+10)
+* LinkedIn followers: Decred page 495 (+12), Politeia page 29 (+0)
+* GitHub dcrd stars: 479 (+5), forks: 1,257 (+20)
 
 Comm systems news:
 
-* Stakey stickers are now [available](https://twitter.com/dcrstakey/status/1104032806513115136) in Riot web, Android and iOS Matrix clients. Thanks to @lustosa and Matrix folks for adding! Excited testing of these totally [disrupted](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155205491220668sKKGI:decred.org) #general. Known issue: Matrix stickers do not cross the bridge to Slack and Discord. Secret hint from @jrick: these stickers are available across the entire Matrix federation and can be used in rooms with no relation to Decred. Use wisely.
-* Chinese community members managed to setup a [page](https://www.chainnode.com/forum/305) for Decred discussion on chainnode.com, a rebrand of 8btc.com and one of the largest crypto forums in Chinese. {any stats from there?}
+* Stakey stickers are now [available](https://twitter.com/dcrstakey/status/1104032806513115136) in Riot web, Android and iOS Matrix clients. Thanks to @lustosa and Matrix folks for adding! Excited testing of these stickers totally [disrupted](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155205491220668sKKGI:decred.org) #general. Known issue: Matrix stickers do not cross the bridge to Slack and Discord. Secret hint from @jrick: these stickers are available across the entire Matrix federation and can be used in rooms with no relation to Decred. Use wisely.
 * Transferring of message edits across the chat bridge was disabled, so if you edit message on Discord or Telegram, the edit won't transfer to Matrix (and not produce an annoying duplicate message).
-* Right after disabling message edits in our bridge software (matterbridge), an untested code path was hit that took down the bridge for a few hours. The bug was quicly identified by @dhill.
-* new [#101](https://matrix.to/#/!MiucsxxSPQBpoidaHN:decred.org) room was started to help beginner and shower thought questions, bridged with Slack, Discord and Telegram. Bridging with Telegram is uncommon because of huge amount of spam on that platform. Previous #telegram bridged room was shutdown for too much spam that wasn't automatically deleted when Telegram moderators deleted it.
-* Telegram hardening: @Aztec and team upgraded the "slapper bots" that boot people and bots for bad content, also a "shield bot" was added that does captcha for new room entrants
+* Right after disabling message edits in our bridge software ([matterbridge](https://github.com/42wim/matterbridge)), an untested code path was hit that took down the bridge for a few hours. @dhill quickly located the bug and submitted a pull request.
+* New [#101](https://matrix.to/#/!MiucsxxSPQBpoidaHN:decred.org) room was started to help beginners get around and serve as a place for shower thought questions (this was requested a few times). The room is bridged with Slack, Discord and Telegram. Bridging with Telegram is uncommon because of huge amount of spam on that platform. For some background, previous #telegram room was unbridged for too much spam that wasn't automatically deleted when Telegram moderators deleted it.
+* Telegram hardening: @Aztec and team upgraded the "slapper bots" that boot people and bots for bad content, also a "shield bot" was added that does captcha for new room entrants.
+* Chinese community members managed to setup a [page](https://www.chainnode.com/forum/305) for Decred discussion on chainnode.com, a rebrand of 8btc.com and one of the largest crypto forums in Chinese. {any stats from there?}
 
-{selected discussed topics, as bullet list or one paragraph per topic}
-
-Reddit:
-
-* https://www.reddit.com/r/decred/comments/awv5yt/skepticism_sunday_march_3_2019/
-* https://www.reddit.com/r/decred/comments/axdfvd/how_many_of_you_would_want_part_of_your_paycheck/
-
-Twitter: {interesting threads}
+Selected Reddit discussions: "Skepticism Sunday" threads on [Mar 3](https://www.reddit.com/r/decred/comments/awv5yt/skepticism_sunday_march_3_2019/) and [Mar 24](https://www.reddit.com/r/decred/comments/b4xx9h/skepticism_sunday_march_24_2019/); how many people would like part of their paycheck [in DCR](https://www.reddit.com/r/decred/comments/axdfvd/how_many_of_you_would_want_part_of_your_paycheck/); thoughts on [using Kialo](https://www.reddit.com/r/decred/comments/axyxw2/should_the_decred_network_utilize_kialo_as/) as a tool for more structured communications around decision making; idea to add [polls](https://www.reddit.com/r/decred/comments/b5smyl/testing_the_waters_with_this_idea_maybe/) to Politeia.
 
 ## Markets
 
