--- a/journal/201903.md
+++ b/journal/201903.md
@@ -275,11 +275,9 @@ Selected Reddit discussions: "Skepticism Sunday" threads on [Mar 3](https://www.
 
 ## Markets
 
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
+In March DCR was trading between USD 15.93-23.26 / BTC 0.00414-0.00596 per [coinmarketcap](https://coinmarketcap.com/currencies/decred/#charts). The average daily rate was $18.14.
 
-Mar 12 jump of multiple altcoin prices on Polo. Some had up to +60% while DCR had a modest +3%.
-
-In March DCR was trading between USD {}-{} / BTC {}-{}. The average daily rate was ${}.
+In the middle of March many cryptoassets experienced significant short-term or prolonged growth. On Mar 12 DCR had a short spike on all exchanges, for example on Binance from 0.0043 to 0.00638 BTC. After that the price settled above 0.0048 BTC where it was in the best days of Dec-Jan and earlier.
 
 ## Relevant External
 
