--- a/journal/201903.md
+++ b/journal/201903.md
@@ -207,8 +207,6 @@ Community efforts:
 * @max\_bronstein compiled [Decred Canon](https://github.com/maxbron08/Decred-Canon) - a collection of readings and resources to help people familiarize themselves with the Decred Project.
 * New articles by @mm at stakey.club: [Sharing the dcrd](https://stakey.club/en/sharing-the-dcrd/) with multiple devices, [Decred Verifier](https://stakey.club/en/decred-verifier/) script to check hashes and signatures (you do verify signatures, right?).
 
-CoinMarketCap [started to show](https://medium.com/@davebalter/coinmarketcap-partners-with-flipside-crypto-to-distribute-project-health-scores-f181374f3d0e) FCAS rating for crypto assets. The Fundamental Crypto Asset Score is tracked by Flipside Crypto since early 2017 and is available for more than 450 projects. The goal of the system is to answer "can this crypto project produce product people want to use, and are people using it?" by largely ignoring price movements and instead putting more weight in customer activity and developer behavior, as explained [here](https://www.flipsidecrypto.com/fcas-explained). As of {} Decred is [rated](https://coinmarketcap.com/currencies/decred/#ratings) "A" 795 out of 1000 {update}.
-
 Selected articles:
 
 * How Close to Absolute Decentralization is Decred's Unique Consensus Mechanism? by Trevor Holman ([cryptonewsz.com](https://www.cryptonewsz.com/how-close-to-absolute-decentralization-is-decreds-unique-consensus-mechanism/8998/), _missed in Feb issue_)
@@ -237,15 +235,13 @@ Translations:
 * Decred Journal January and February issues were [translated](https://xaur.github.io/decred-news/) to - hold your breath: Arabic by @arij (victorious after long fight with right-to-left issues), Chinese by @guang, Polish by @kozel, Russian by @DZ, Spanish by @elian and Vietnamese by Duyên Em. Thank you so much for spreading the word!
 * Translators, note that there is an index of translated articles [here](https://github.com/artikozel/decred-translations/blob/master/article_index.md). Reach out in [#writers_room](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org) or via pull request to add your translations.
 
-Videos:
-
-* {}
-
 Audio:
 
 * Did You Know Crypto - Episode 26: On Decred. @moo31337 talks about his background, what is Decred, its hybrid consensus, stability, proposal system and the DEX. ([didyouknowcrypto.com](http://didyouknowcrypto.com/ep26/))
 * The Blockcrunch - How Does Decred's Governance Work? Part 1 of interview with @Haon talks about Decred's governance, stakeholder rewards, voting topics and why both miners and voters are needed. ([libsyn.com](https://blockcrunch.libsyn.com/how-does-decreds-governance-work-noah-pierau-decred-project), [itunes](https://itunes.apple.com/us/podcast/how-does-decreds-governance-work-noah-pierau-decred-part-1/id1350649166?i=1000431532255&mt=2), [spotify](https://open.spotify.com/episode/7xST0eTxy4xnaK6NILXcbx?si=o3AJJuLvQka7lnpT1BrzWw))
 * The Blockcrunch - Defending Decred's Onchain Governance. Part 2 of interview with @Haon continues about enforceability of on-chain votes, stake-based vs entity-based voting, fairness and centralization in PoS and threat of malicious actors. ([libsyn.com](https://blockcrunch.libsyn.com/defending-decred-noah-pierau-decred-part-2))
+
+CoinMarketCap [started to show](https://medium.com/@davebalter/coinmarketcap-partners-with-flipside-crypto-to-distribute-project-health-scores-f181374f3d0e) FCAS rating for crypto assets. The Fundamental Crypto Asset Score is tracked by Flipside Crypto since early 2017 and is available for more than 450 projects. The goal of the system is to answer "can this crypto project produce product people want to use, and are people using it?" by largely ignoring price movements and instead putting more weight in customer activity and developer behavior, as explained [here](https://www.flipsidecrypto.com/fcas-explained). As of Apr 9 Decred is [rated](https://coinmarketcap.com/currencies/decred/#ratings) "A" 778 out of 1000. Some context: Litecoin 752, Zcash 792, Bitcoin 862, EOS 910, Ethereum 914.
 
 ## Community
 
