--- a/journal/201903.md
+++ b/journal/201903.md
@@ -148,7 +148,7 @@ Nodes: As of Apr 1 there were 191 public listening nodes and 336 normal nodes pe
 
 ## Integrations
 
-OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the listing of DCR pairs against BTC, ETH and USD, adding another fiat on-ramp for DCR. The news followed a joint [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco.
+Following a joint [event](https://www.eventbrite.com/e/decred-okcoin-present-the-next-10-years-crypto-boom-bust-or-buidl-tickets-57549671617) in San Francisco, OKCoin [announced](https://twitter.com/OKCoin/status/1105892924586258434) the listing of DCR pairs against BTC, ETH and USD, adding another fiat on-ramp for DCR. The news were picked up by [The Block](https://www.theblockcrypto.com/tiny/okcoin-offers-first-usd-to-crypto-trading-pair-for-decred-but-difficult-questions-remain/) and several smaller outlets.
 
 [CoinText](https://cointext.io/) added [DCR support](https://twitter.com/vinarmani/status/1111034078847995905). The service allows to send DCR to anyone with a phone in the US and Canada. Do read up on how the service works and use appropriate caution and small amounts.
 
@@ -167,7 +167,7 @@ Ditto's March achievements:
 * Drafted high-level messaging around how ticketing works (pending).
 * Drafted a byline on the Treasury for investinblockchain.com, which [went live](https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/) in April.
 
-For more detail and smaller items see Ditto's biweekly updates from [Mar 1](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org), [Mar 15](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org) and [Mar 29](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1553889088955UNmaG:decred.org).
+For more detail and smaller items see Ditto's biweekly updates from [Mar 1](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155148239113862OPjOD:decred.org), [Mar 15](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$155268940829940XRdUb:decred.org) and [Mar 29](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1553889088955UNmaG:decred.org). Thanks to @liz\_bagot for consistenly providing biweekly and monthly reports about Ditto's progress!
 
 Discussions:
 
@@ -311,6 +311,8 @@ Coinbase received a [backlash](https://www.coindesk.com/bitcoin-delete-coinbase-
 
 The problem Coinbase tried to solve with that acquisition was their KYC contractors "selling client data", as [slipped](https://news.bitcoin.com/coinbase-severs-ties-with-hacking-team-members-while-data-sharing-backlash-intensifies/) in an interview. When you upload your ID, most exchanges handle it to 3rd parties, who may handle it to more 3rd parties, and so on so it can quickly get [out of control](https://twitter.com/NickSzabo4/status/1102353760276275206). Per another [report](https://bitcoinmagazine.com/articles/coinbase-bought-neutrino-because-its-old-analysis-providers-sold-user-data/) there was not much choice for Coinbase due to another problem - many such firms moved to a 'give-get' data model, where Coinbase would only be permitted to use the service in return for providing its own data. Besides spreading to an unknown set of entities, another risk is this can lead to enormous amounts of interlinked personal data concentrated in a single place that will become a hot target. For example, [Jumio](https://en.wikipedia.org/wiki/Jumio)'s Netverify is [used](https://cybersecurity-excellence-awards.com/candidates/netverify) by 5 of the top 10 exchanges including Coinbase, Bittrex and Bitstamp, and an increasing number of ICO issuers.
 
+New Android malware was [detected](https://www.group-ib.com/media/gustuff/) that targets more than 100 global banking apps including 32 cryptocurrency apps such as Bitcoin Wallet, BitPay, Cryptopay, Coinbase and others. Another [report](https://securelist.com/cryptocurrency-businesses-still-being-targeted-by-lazarus/90019/) about an old crypto hacking group recommends Windows and macOS users to be more cautious when dealing with new 3rd parties, installing software, and to never 'Enable Content' (macro scripting) in Microsoft Office documents received from new or untrusted sources.
+
 Beta of Neutrino wallet for Bitcoin Cash was [released](https://news.bitcoin.com/bitcoin-cash-developers-launch-privacy-preserving-light-client-neutrino/) for Android. It uses the same SPV tech as Decred to connect wallets directly to the nodes without intermediaries. See [December](201812.md) issue for the coverage of BCHD project and its relation to Decred.
 
 ## About This Issue
@@ -321,4 +323,4 @@ Most information from third parties is relayed directly from source after a mini
 
 Your feedback and contributions are welcome on Reddit, [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
 
-Credits (alphabetical order): bee, davecgh, guang, jholdstock, raedah, richardred.
+Credits (alphabetical order): bee, davecgh, degeri, guang, jholdstock, liz\_bagot, raedah, richardred.
